--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -10,16 +10,18 @@
 <table class="table table-striped">
   <thead>
   <tr>
-    <th>Id</th>
-    <th>First Name</th>
-    <th>Last Name</th>
+    <th>Name</th>
+    <th>Specialties</th>
   </tr>
   </thead>
   <tbody>
   <tr th:each="vet : ${vets}">
-    <td th:text="${vet?.id}">1</td>
-    <td th:text="${vet?.firstName}">Leo</td>
-    <td th:text="${vet?.lastName}">Marinho</td>
+    <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+    <td>
+      <span th:each="specialty : ${vet.specialities}"
+            th:text="${specialty.description + ' '}">
+      </span><span th:if="${vet?.specialities?.size() == 0}">none</span>
+    </td>
   </tr>
   </tbody>
 </table>
